# QuickPCA

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  environment.yml  mkdocs.yml  pyproject.toml  quickPCA.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: README.md  generate_assets.py
benchmarks/: README.md  bench_backends.py  results.md
conda/: meta.yaml
docs/: api.md  backends.md  cli.md  contributing.md  index.md  installation.md  quickstart.md  theory.md
examples/: 01_quickstart.ipynb  02_jax_gpu.ipynb  03_free_energy_landscape.ipynb  README.md
paper/: paper.bib  paper.md
quickpca/: __init__.py  __main__.py  cli.py  config.py  crosscorr.py  datasets.py  fel.py  pca.py  report.py  report_html.py  types.py
quickpca/backends/: __init__.py  base.py  jax_backend.py  numpy_backend.py
quickpca/commands/: __init__.py  cluster.py  convergence.py  interactive.py  rmsf.py  web.py
quickpca/io/: __init__.py  loader.py
quickpca/plugin/: __init__.py  pymol_plugin.py
tests/: conftest.py  test_cli.py  test_cluster.py  test_convergence.py  test_datasets.py  test_fel.py  test_jax_backend.py  test_loader.py  test_numpy_backend.py  test_pca.py  test_plugin.py  test_report.py  test_report_html.py  test_rmsf.py  test_web.py
